--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^2.0.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
     "@rainbow-me/rainbowkit": "^0.12.1",
     "@reddio.com/js": "0.8.4",
@@ -29,5 +30,9 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "wagmi": "^0.12.1"
+  },
+  "devDependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "date-fns": "^3.6.0"
   }
 }
