--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "@wagmi/core": "^0.10.1",
     "autoprefixer": "10.4.14",
+    "copy-to-clipboard": "^3.3.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "ethers": "^5.7.1",
