--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.1",
     "tailwindcss": "3.3.3",
+    "telegraf": "^4.16.3",
     "typescript": "5.1.6",
     "wagmi": "^0.12.1"
   },
