--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/compatible": "^5.1.3",
     "@particle-network/connectkit": "^1.4.8",
     "@radix-ui/colors": "^2.0.1",
     "@radix-ui/react-dialog": "^1.1.1",
