--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.3",
+    "@particle-network/auth": "^1.3.1",
+    "@particle-network/auth-core-modal": "^1.5.1",
     "@particle-network/connectkit": "^1.4.8",
+    "@particle-network/provider": "^1.3.2",
     "@radix-ui/colors": "^2.0.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
