--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.3",
+    "@particle-network/aa": "^1.5.1",
     "@particle-network/auth": "^1.3.1",
     "@particle-network/auth-core-modal": "^1.5.1",
     "@particle-network/connectkit": "^1.4.8",
@@ -17,12 +18,12 @@
     "@radix-ui/colors": "^2.0.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@rainbow-me/rainbowkit": "^0.12.1",
     "@reddio.com/js": "0.8.4",
+    "@tanstack/react-query": "^5.51.9",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "@wagmi/core": "^0.10.1",
+    "@wagmi/core": "^0.10.17",
     "autoprefixer": "10.4.14",
     "copy-to-clipboard": "^3.3.3",
     "eslint": "8.47.0",
@@ -36,7 +37,8 @@
     "tailwindcss": "3.3.3",
     "telegraf": "^4.16.3",
     "typescript": "5.1.6",
-    "wagmi": "^0.12.1"
+    "viem": "^2.17.5",
+    "wagmi": "^2.11.2"
   },
   "devDependencies": {
     "@radix-ui/react-icons": "^1.3.0",
