--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.3",
+    "@ant-design/icons": "^5.4.0",
     "@particle-network/aa": "^1.5.1",
     "@particle-network/auth": "^1.3.1",
     "@particle-network/auth-core-modal": "^1.5.1",
@@ -19,17 +20,22 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reddio.com/js": "0.8.4",
+    "@starkware-industries/starkware-crypto-utils": "^0.2.1",
     "@tanstack/react-query": "^5.51.9",
+    "@twa-dev/sdk": "github:twa-dev/SDK",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@wagmi/core": "^0.10.17",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
+    "bn.js": "^5.2.1",
     "copy-to-clipboard": "^3.3.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "ethers": "^5.7.1",
-    "next": "13.4.13",
+    "js-sha3": "^0.9.3",
+    "next": "^13.5.6",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
